@@ -1,4 +1,5 @@
 <configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:zcml="http://namespaces.zope.org/zcml"
            i18n_domain="eea">
 
   <include package="Products.ATVocabularyManager" />
@@ -17,7 +18,12 @@
 
   <include package=".upgrades" />
 
-
   <include package=".faceted" />
+  
+  <!-- include the specific rdf marshaller for geotags   -->
+  <configure zcml:condition="installed eea.rdfmarshaller"> 
+    <include package=".rdf" />
+  </configure>
 
+  
 </configure>
