@@ -15,3 +15,10 @@ class IGeoTags(Interface):
     """ Accessor/Mutator for geo tags annotations
     """
     tags = schema.Dict(title=u"Geojson tags")
+    
+    
+    def getPoints(self):
+        """ Returns a list of points as lat,long pairs in 
+        WGS 84 reference coordinate system.
+        """
+        
