@@ -3,6 +3,8 @@ Changelog
 
 5.1-dev - (unreleased)
 ----------------------
+* Feature: added rdf adapter for geotag field
+  [tiberich, demarant, #3425]
 
 5.0 - (2012-07-30)
 ------------------
